[project]
name = "CHIS"
version = "0.1.0"
description = "Environment Configuration for CHIS Dependencies"
requires-python = ">=3.12,<3.13"
dependencies = [
    "torch>=2.7.0",
    "torchvision>=0.22.0",
    "accelerate>=0.30",
    "einops>=0.7",
    "einops-exts>=0.0.4",
    "ema-pytorch>=0.4",
    "fsspec>=2024.2",
    "jsonlines>=4.0",
    "kornia>=0.7",
    "numpy>=1.24,<2.0",
    "packaging>=23.0",
    "pillow>=10.0",
    "protobuf>=4.25",
    "pytorch-warmup>=0.2",
    "sentencepiece>=0.2",
    "tqdm>=4.66",
    "transformers>=4.40",
    "wandb>=0.16",
    "diffusers>=0.37.1",
    "timm>=1.0.27",
    "opencv-python>=4.11.0.86",
    "scipy>=1.17.1",
]

[project.optional-dependencies]
image-synthesis = [
    "albumentations>=1.3",
    "opencv-python-headless>=4.8",
    "omegaconf>=2.3",
    "open-clip-torch>=2.24",
    "pytorch-lightning>=1.9,<2.0",
    "scipy>=1.10",
    "taming-transformers-rom1504>=0.0.6",
    "timm>=0.9",
]

[tool.uv.sources]
torch = [{ index = "pytorch-cu128" }]
torchvision = [{ index = "pytorch-cu128" }]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
